--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -10,6 +10,7 @@
 # `Pipfile.lock` and then regenerate `requirements*.txt`.
 ################################################################################
 
+bumpversion
 flake8
 ipython
 jupyter
