--- a/requirements.txt
+++ b/requirements.txt
@@ -11,6 +11,7 @@
 ################################################################################
 
 blinkstick
+click
 colorutils
 python-box
 pyyaml
